Re-fix collapsing borders issue
Introducing a new div in commit 6b01c28 caused the previous
fix to break.

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,3 +1,8 @@
+.content {
+  display: flex;
+  flex-direction: column;
+}
+
 @media screen and (min-width: 768px) {
   .root {
     display: flex;
