--- a/src/components/BgImgContainer/BgImgContainer.module.css
+++ b/src/components/BgImgContainer/BgImgContainer.module.css
@@ -25,8 +25,3 @@
   width: 100vw;
   height: 100vh;
 }
-
-.BgImgContainer {
-  display: flex;
-  flex-direction: column;
-}
